--- a/snippet_share_project/snip_app/templates/detail.html
+++ b/snippet_share_project/snip_app/templates/detail.html
@@ -2,11 +2,10 @@
 {% load static %}
 {% block content %}
 
-
 <div class="main">
     <h1 class="title">{{snip.title}}</h1>
-    <b><time>{{snip.date}}</time></b>
-    <div class="hlinks">
+    <b><time>{{snip.updated_at}}</time></b>
+    <div>
         <b>Paste URL:</b> <a href="{{ request.build_absolute_uri }}">"{{ request.build_absolute_uri }}"</a>
     </div>
     <pre><code class="language-{{snip.lang}} line-numbers">{{snip.text}}</code></pre>
