--- a/snippet_share_project/snip_app/static/css/prism.css
+++ b/snippet_share_project/snip_app/static/css/prism.css
@@ -263,7 +263,7 @@ div.code-toolbar > .toolbar a,
 div.code-toolbar > .toolbar button,
 div.code-toolbar > .toolbar span {
 	color: #bbb;
-	/* font-size: .8em; */
+	font-size: .8em;
 	padding: 0 .7em;
 	margin: 5px !important;
 	background: #f5f2f0;
