--- a/snippet_share_project/snip_app/templates/base.html
+++ b/snippet_share_project/snip_app/templates/base.html
@@ -75,7 +75,7 @@
           </div>
         </div>
 
-        <div class="column is-one-quarter" style="margin-left: 40px ;">
+        <div class="column is-one-quarter sidebar" style="margin-left: 40px ;">
           <article class="panel is-info">
             <p class="panel-heading">
               All Snippets:
