--- a/snippet_share_project/accounts/templates/accounts/signup.html
+++ b/snippet_share_project/accounts/templates/accounts/signup.html
@@ -46,7 +46,7 @@
 
 <div class="columns"  id="login">
   <div class="column is-half" style="margin: auto !important;">
-<form action="{% url 'login' %}" method="POST" >
+<form action="{% url 'signup' %}" method="POST" >
 {% csrf_token %}
 <div class="field" style="margin-bottom: 20px;">
   <p class="control has-icons-left has-icons-right">
@@ -77,7 +77,7 @@
 </div>
 <div class="field">
   <p class="control">
-    <input class="button is-warning is-rounded" type="submit" value="Login" style="font-weight: 700;">
+    <input class="button is-warning is-rounded" type="submit" value="Sign Up" style="font-weight: 700;">
   </p>
 </div>
 
