added edit/delete option

--- a/fileupload/templates/fileupload/upload_form.html
+++ b/fileupload/templates/fileupload/upload_form.html
@@ -5,6 +5,9 @@
     .sidebar{
         display: none;
     }
+    .main{
+      margin: auto;
+    }
 </style>
         <link href="{% static 'fileupload/css/dropzone.css' %}" type="text/css" rel="stylesheet"/>
 <div class="uploadform">
