--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -2,93 +2,93 @@
 
 {% block content %}
 <style>
-  .sidebar{
+  .sidebar {
     display: none !important;
   }
 
-  .main{
+  .main {
     margin: auto !important;
   }
 
   #login {
-  transition: box-shadow .3s;
-  margin: 50px;
-  padding: 50px 40px;
-  border-radius:10px;
-  border: 1px solid #ccc;
-  background: #fff;
-  float: left;
-  
-}
-#login:hover {
-  box-shadow: 0 0 11px rgba(33,33,33,.2); 
-}
+    transition: box-shadow .3s;
+    margin: 50px;
+    padding: 50px 40px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background: #fff;
+    float: left;
 
+  }
+
+  #login:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, .2);
+  }
 </style>
 {% if error %}
 <div class="notification is-danger" onclick="myFunction()" id="error">
   <button class="delete"></button>
-<strong>{{error}}</strong>
+  <strong>{{error}}</strong>
 </div>
 <script>
   function myFunction() {
-  var x = document.getElementById("error");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
+    var x = document.getElementById("error");
+    if (x.style.display === "none") {
+      x.style.display = "block";
+    } else {
+      x.style.display = "none";
+    }
   }
-}
 </script>
 {% endif %}
 
 
 
-<div class="columns"  id="login">
+<div class="columns" id="login">
   <div class="column is-half" style="margin: auto !important;">
-<form action="{% url 'signup' %}" method="POST" >
-{% csrf_token %}
-<div class="field" style="margin-bottom: 20px;">
-  <p class="control has-icons-left has-icons-right">
-    <input class="input" type="text" placeholder="Username" name="username">
-    <span class="icon is-small is-left">
-      <i class="fas fa-user"></i>
-    </span>
-    <span class="icon is-small is-right">
-      <i class="fas fa-check"></i>
-    </span>
-  </p>
-</div>
-<div class="field" style="margin-bottom: 20px;">
-  <p class="control has-icons-left">
-    <input class="input" type="password" placeholder="Password" name="password">
-    <span class="icon is-small is-left">
-      <i class="fas fa-lock"></i>
-    </span>
-  </p>
-</div>
-<div class="field" style="margin-bottom: 20px;">
-  <p class="control has-icons-left">
-    <input class="input" type="password" placeholder="Confirm Password" name="confirmpassword">
-    <span class="icon is-small is-left">
-      <i class="fas fa-lock"></i>
-    </span>
-  </p>
-</div>
-<div class="field">
-  <p class="control">
-    <input class="button is-warning is-rounded" type="submit" value="Sign Up" style="font-weight: 700;">
-  </p>
-</div>
+    <form action="{% url 'signup' %}" method="POST">
+      {% csrf_token %}
+      <div class="field" style="margin-bottom: 20px;">
+        <p class="control has-icons-left has-icons-right">
+          <input class="input" type="text" placeholder="Username" name="username">
+          <span class="icon is-small is-left">
+            <i class="fas fa-user"></i>
+          </span>
+          <span class="icon is-small is-right">
+            <i class="fas fa-check"></i>
+          </span>
+        </p>
+      </div>
+      <div class="field" style="margin-bottom: 20px;">
+        <p class="control has-icons-left">
+          <input class="input" type="password" placeholder="Password" name="password">
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </p>
+      </div>
+      <div class="field" style="margin-bottom: 20px;">
+        <p class="control has-icons-left">
+          <input class="input" type="password" placeholder="Confirm Password" name="confirmpassword">
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </p>
+      </div>
+      <div class="field">
+        <p class="control">
+          <input class="button is-warning is-rounded" type="submit" value="Sign Up" style="font-weight: 700;">
+        </p>
+      </div>
 
-</form>
+    </form>
 
-</div>
+  </div>
 
-<div class="column is-half">
-  <figure class="image">
-    <img src="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
-  </figure>
-</div>
+  <div class="column is-half">
+    <figure class="image">
+      <img src="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
+    </figure>
+  </div>
 </div>
 {% endblock %}
