--- a/snip_app/templates/base.html
+++ b/snip_app/templates/base.html
@@ -7,8 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SnipBoard</title>
-  <link rel="shortcut icon"
-    href="https://icons.iconarchive.com/icons/thehoth/seo/256/seo-web-code-icon.png"
+  <link rel="shortcut icon" href="https://icons.iconarchive.com/icons/thehoth/seo/256/seo-web-code-icon.png"
     type="image/x-icon">
   <link href="{% static 'css/prism.css' %}" rel="stylesheet" />
   <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
@@ -16,24 +15,27 @@
 
 
   <!--meta tags-->
-<!-- Primary Meta Tags -->
-<title>Snippet Share </title>
-<meta name="title" content="Snippet Share ">
-<meta name="description" content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
+  <!-- Primary Meta Tags -->
+  <title>Snippet Share </title>
+  <meta name="title" content="Snippet Share ">
+  <meta name="description"
+    content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://snip-share.herokuapp.com/">
-<meta property="og:title" content="Snippet Share ">
-<meta property="og:description" content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
-<meta property="og:image" content="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://snip-share.herokuapp.com/">
+  <meta property="og:title" content="Snippet Share ">
+  <meta property="og:description"
+    content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
+  <meta property="og:image" content="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://snip-share.herokuapp.com/">
-<meta property="twitter:title" content="Snippet Share ">
-<meta property="twitter:description" content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
-<meta property="twitter:image" content="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://snip-share.herokuapp.com/">
+  <meta property="twitter:title" content="Snippet Share ">
+  <meta property="twitter:description"
+    content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
+  <meta property="twitter:image" content="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
   <!--meta tags-->
 
 
@@ -67,12 +69,13 @@
         </a>
 
       </div>
-      
+
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
             {% if user.is_authenticated %}
-            <a class="button is-warning is-rounded" href="javascript:{document.getElementById('logout').submit()}" style="font-weight: 700;">Logout</a>
+            <a class="button is-warning is-rounded" href="javascript:{document.getElementById('logout').submit()}"
+              style="font-weight: 700;">Logout</a>
             <form id="logout" method="POST" action="{% url 'logout' %}">
               {% csrf_token %}
               <input type="hidden" />
@@ -119,24 +122,24 @@
               <a>Private</a>
             </p> -->
             <div class="panel-block">
-<style>
-    .searchform input{
-  margin: 10px !important;
-  padding: 10px 10px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  }
+              <style>
+                .searchform input {
+                  margin: 10px !important;
+                  padding: 10px 10px;
+                  border: 1px solid #ccc;
+                  border-radius: 10px;
+                }
 
-  .asteriskField {
-    display: none;
-}
-
-</style>
+                .asteriskField {
+                  display: none;
+                }
+              </style>
               <form method="POST" class="uniForm searchform is-left" style="font-weight: 700 !important;">
                 {% csrf_token %}
                 {{ searchform|crispy }}
               </form>
-              <button class="button is-info is-small is-rounded is-right" style="margin-top: 22px; margin-left: 20px;">Submit</button>
+              <button class="button is-info is-small is-rounded is-right"
+                style="margin-top: 22px; margin-left: 20px;">Submit</button>
             </div>
 
             {% for i in snips %}
