fixed meta tags

--- a/snip_app/templates/base.html
+++ b/snip_app/templates/base.html
@@ -19,14 +19,14 @@
   <title>Snippet Share </title>
   <meta name="title" content="Snippet Share ">
   <meta name="description"
-    content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
+    content="A snippet sharing web app that lets you share code snippets with proper syntax highlighting and upload files.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://snip-share.herokuapp.com/">
   <meta property="og:title" content="Snippet Share ">
   <meta property="og:description"
-    content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
+    content="A snippet sharing web app that lets you share code snippets with proper syntax highlighting and upload files.">
   <meta property="og:image" content="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
 
   <!-- Twitter -->
@@ -34,7 +34,7 @@
   <meta property="twitter:url" content="https://snip-share.herokuapp.com/">
   <meta property="twitter:title" content="Snippet Share ">
   <meta property="twitter:description"
-    content="A snippet sharing that lets you share code snippets with proper syntax highlighting and upload files.">
+    content="A snippet sharing web app that lets you share code snippets with proper syntax highlighting and upload files.">
   <meta property="twitter:image" content="https://i.pinimg.com/originals/94/ab/ec/94abecb84b4d35ee2f3b2b8f0c8a1656.png">
   <!--meta tags-->
 
