--- a/snippet_share_project/snip_app/templates/index.html
+++ b/snippet_share_project/snip_app/templates/index.html
@@ -31,7 +31,11 @@
 }
 
 .snipform select {
-  padding: 16px 20px;
+  margin-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   border: 2px solid #ccc;
   border-radius: 4px;
 }
