Fixed sidebar using media queries
Sidebar had margin-left:40px earlier. But in mobile view it was extra unneeded space. So, I've replaced it with 1rem space both ends.

--- a/snippet_share_project/snip_app/templates/base.html
+++ b/snippet_share_project/snip_app/templates/base.html
@@ -84,7 +84,14 @@
           </div>
         </div>
 
-        <div class="column is-one-quarter sidebar" style="margin-left: 40px ;">
+        <div class="column is-one-quarter sidebar">
+          <style> .sidebar{margin-left:40px; margin-right:1rem;}
+              @media (max-width: 400px) {
+                  .sidebar {
+                      margin-left:1rem;
+                  }
+}
+</style>
           <article class="panel is-info">
             <p class="panel-heading">
               All Snippets:
